k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceerat-web
  namespace: ceerat-frontend
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: app.ceerat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ceerat-web-ui
                port:
                  name: http
    - host: admin.ceerat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ceerat-admin-ui
                port:
                  name: http
    - host: customer.ceerat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ceerat-customer-ui
                port:
                  name: http
